--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -75,7 +75,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* === SHADOWS === */
 /* line 1, ../sass/_base.scss */
 * {
-  border: 1px solid red;
+  /*border: 1px solid red !important;*/
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -128,6 +128,12 @@ p {
   line-height: 21px;
   font-weight: 400;
   letter-spacing: .25px;
+}
+
+/* line 49, ../sass/_base.scss */
+a {
+  text-decoration: none;
+  color: #4BC180;
 }
 
 /* === HOMEPAGE === */
@@ -215,6 +221,7 @@ p {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+  padding: 64px 0 150px 0;
 }
 /* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
 .project-content-container:after {
@@ -222,51 +229,59 @@ p {
   display: block;
   clear: both;
 }
-/* line 63, ../sass/_layouts.scss */
+/* line 64, ../sass/_layouts.scss */
 .project-content-container h4 {
   margin-bottom: 4px;
 }
-/* line 67, ../sass/_layouts.scss */
+/* line 68, ../sass/_layouts.scss */
 .project-content-container h3 {
   margin-bottom: 40px;
 }
-/* line 71, ../sass/_layouts.scss */
+/* line 72, ../sass/_layouts.scss */
 .project-content-container .breadcrumb-container {
-  width: 96.56863%;
+  width: 98.07692%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
 }
-/* line 75, ../sass/_layouts.scss */
+/* line 76, ../sass/_layouts.scss */
 .project-content-container .image-container {
-  width: 63.23529%;
+  width: 58.49359%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
 }
 @media (max-width: 768px) {
-  /* line 75, ../sass/_layouts.scss */
+  /* line 76, ../sass/_layouts.scss */
   .project-content-container .image-container {
-    width: 96.56863%;
+    width: 98.07692%;
     float: left;
-    margin-left: 1.71569%;
-    margin-right: 1.71569%;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
   }
 }
-/* line 82, ../sass/_layouts.scss */
+/* line 83, ../sass/_layouts.scss */
+.project-content-container .image-container img {
+  margin-bottom: 40px;
+}
+/* line 85, ../sass/_layouts.scss */
+.project-content-container .image-container img:last-child {
+  margin-bottom: 0;
+}
+/* line 91, ../sass/_layouts.scss */
 .project-content-container .description-container {
-  width: 29.90196%;
+  width: 31.41026%;
   float: right;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
 }
 @media (max-width: 768px) {
-  /* line 82, ../sass/_layouts.scss */
+  /* line 91, ../sass/_layouts.scss */
   .project-content-container .description-container {
-    width: 96.56863%;
+    width: 98.07692%;
     float: left;
-    margin-left: 1.71569%;
-    margin-right: 1.71569%;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
   }
 }
 
@@ -439,4 +454,8 @@ nav .nav-container ul .nav-item:last-child {
 .breadcrumb-container {
   display: flex;
   margin-bottom: 24px;
+}
+/* line 116, ../sass/_modules.scss */
+.breadcrumb-container .current-project {
+  margin-left: 4px;
 }
